# zutto-editor

./: Cargo.toml  log4rs.yaml  log4rs2.yaml
settings/: default.json  keymap.json  theme.json
src/: actions.rs  buffer.rs  key.rs  lib.rs  lineinput.rs  main.rs  render.rs  tab.rs
src/tab/: buffer.rs  directory.rs  mod.rs  shell.rs  terminal.rs
