[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-stream = "0.3.6"
crossterm = { version = "0.28.1", features = ["event-stream"] }
log = "0.4.25"
log4rs = "1.3.0"
ropey = "1.6.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
strum = "0.26.3"
strum_macros = "0.26.4"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
